did flexbox exercise 4

--- a/flexbox_exercise/style3.css
+++ b/flexbox_exercise/style3.css
@@ -51,13 +51,13 @@ ul {
   list-style-type: none;
   display: flex;
   gap: 16px;
-  margin: 0;
+  margin: 10px;
   padding: 0;
 }
 
-header.left, header.right{
+.left, .right{ 
   display: flex;
-  
   gap: 16px;
+  
 
 }
