--- a/flexbox_exercise/style5.css
+++ b/flexbox_exercise/style5.css
@@ -16,10 +16,16 @@ body {
 }
 
 .modal {
+  display: flex;
+  gap: 16px;
   background: white;
   width: 480px;
   border-radius: 10px;
   box-shadow: 2px 4px 16px rgba(0,0,0,.2);
+  padding: 20px;
+  flex-direction: row;
+
+  
 }
 
 .icon {
@@ -39,7 +45,7 @@ body {
   background: #eee;
   border-radius: 50%;
   color: #888;
-  font-weight: 400;
+  font-weight: bold;
   font-size: 16px;
   height: 24px;
   width: 24px;
@@ -49,6 +55,7 @@ body {
   border: 1px solid #eee;
   padding: 0;
 }
+
 
 button {
   cursor: pointer;
@@ -66,4 +73,22 @@ button.cancel {
   background: white;
   border: 1px solid #ddd;
   color: royalblue;
+}
+
+
+.icon {
+  flex-shrink: 0;
+}
+
+.header{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  font-size: 18px;
+  font-weight: 700;
+  margin-bottom: 8px;
+}
+
+.text {
+  margin-bottom: 16px;
 }
