--- a/flexbox_exercise/style6.css
+++ b/flexbox_exercise/style6.css
@@ -1,15 +1,13 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
-
-ul{
-    list-style-type: none;
-}
+ @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
 
 body {
   height: 100vh;
   margin: 0;
   overflow: hidden;
+  display: flex;
+  flex-direction: column;
   font-family: Roboto, sans-serif;
-  
+
 }
 
 img {
@@ -21,7 +19,7 @@ button {
   border: none;
   border-radius: 8px;
   background: #eee;
-  padding: 10px;
+  padding: 8px 16px;
 }
 
 input {
@@ -32,20 +30,41 @@ input {
   margin-bottom: 16px;
 }
 
+a {
+  text-decoration: none;
+  color: #666;
+}
+
+ul{
+  display: flex;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  gap: 16px;
+
+}
+
 .content{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+  flex: 1;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  gap: 16px;
 }
 
-.left-links{
-    display:flex;
-    justify-content: left;
-    
+.header, .footer{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  padding: 16px;
 }
 
-.right-links{
-    display: flex;
-    justify-content: right;
-}
+.footer{
+  display: flex;
+  align-items: baseline;
+  background: #eee;
+  bottom: 0;
+
+} 
+
